fixed overlapping sticky notes

--- a/mainpage.css
+++ b/mainpage.css
@@ -156,8 +156,8 @@ button{
   flex-flow: row wrap;
   justify-content: center;
   align-items: center;
-  
-    width: 100%;
+  height: auto;
+  width: 100%;
   
 }
 .container{
@@ -350,7 +350,7 @@ button{
   }
   
   #fills{
-    height: 100%;
+    height: 83%;
     width: 100%;
   }
   .session{
@@ -416,7 +416,7 @@ button{
   background-color: #ffffff;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+  
   margin:0;
   padding:0;
 
